--- a/Lecture 5/aml_5_linear_models_for_regression.ipynb
+++ b/Lecture 5/aml_5_linear_models_for_regression.ipynb
@@ -371,7 +371,7 @@
     "\n",
     "### YOUR CODE HERE\n",
     "imp=KNNImputer(n_neighbors=3)\n",
-    "imp.fit_transform(X)\n"
+    "X_imp=imp.fit_transform(X)\n"
    ]
   },
   {
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1255,11 +1255,11 @@
     {
      "data": {
       "text/plain": [
-       "array([785.85183809,  41.67264415, 678.05527586, ..., 782.62495816,\n",
-       "       791.36306343, 927.90575716])"
+       "array([0.726, 0.731, 0.726, 0.741, 0.696, 0.778, 0.76 , 0.772, 0.768,\n",
+       "       0.759])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,8 +1285,8 @@
     "reg=LinearRegression()\n",
     "cross_val_score(reg, x_train_scaled, y_train,cv=10)\n",
     "\n",
-    "reg=LinearRegression().fit(x_train_scaled, y_train)\n",
-    "reg.predict(x_test_scaled)"
+    "# reg=LinearRegression().fit(x_train_scaled, y_train)\n",
+    "# reg.predict(x_test_scaled)"
    ]
   },
   {
