--- a/Lecture 6/aml_6_linear_models_for_classification.ipynb
+++ b/Lecture 6/aml_6_linear_models_for_classification.ipynb
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1352,12 +1352,12 @@
     "iris = load_iris()\n",
     "X, y = iris.data, iris.target\n",
     "print(X.shape)\n",
-    "print(np.bincount(y))"
+    "print(np.bincount(y))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1365,11 +1365,35 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression: [0.96666667 1.         0.93333333 0.96666667 1.        ]\n",
+      "SVC: [1.         1.         0.93333333 0.9        1.        ]\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\abpe\\Anaconda3\\lib\\site-packages\\scipy\\__init__.py:155: UserWarning: A NumPy version >=1.18.5 and <1.25.0 is required for this version of SciPy (detected version 1.26.4\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+      "C:\\Users\\abpe\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n",
+      "C:\\Users\\abpe\\Anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:1206: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\abpe\\Anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:1206: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\abpe\\Anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:1206: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\abpe\\Anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:1206: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\abpe\\Anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:1206: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -1381,7 +1405,16 @@
     "# Implement a logistic regression and a linear SVM using the iris dataset\n",
     "\n",
     "### YOUR CODE HERE\n",
-    "\n"
+    "LogReg = LogisticRegression()\n",
+    "# LegReg_scores = cross_val_score(LogReg, X, y, cv=5)\n",
+    "# print(LegReg_scores.mean())\n",
+    "\n",
+    "svc = LinearSVC()\n",
+    "# svc_scores = cross_val_score(svc, X, y, cv=5)\n",
+    "# print(svc_scores.mean())\n",
+    "\n",
+    "print('Logistic Regression: {}'.format(cross_val_score(LogReg, X, y, cv=5)))\n",
+    "print('SVC: {}'.format(cross_val_score(svc, X, y, cv=5)))\n"
    ]
   },
   {
@@ -1419,7 +1452,7 @@
     "    \n",
     "axes[0].set_yticks(range(4))\n",
     "axes[0].set_yticklabels(iris.feature_names)\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n"
    ]
   },
   {
@@ -1656,13 +1689,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unscaled SVC using CV: 0.6634920634920635\n",
+      "Scaled SVC using CV: 0.9833333333333334\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.model_selection import GridSearchCV, cross_val_score, train_test_split\n",
@@ -1672,12 +1714,17 @@
     "\n",
     "wine = load_wine()\n",
     "X, y = wine.data, wine.target\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "\n",
     "# Complete the code below to implement SVC with and without sclaing and compare the results. \n",
     "# You may use pipeline for scaling scenario.\n",
     "\n",
-    "### YOUR CODE HERE\n"
+    "### YOUR CODE HERE\n",
+    "svc_unscaled = SVC()\n",
+    "svc_scaled = make_pipeline(StandardScaler(), SVC())\n",
+    "\n",
+    "print('Unscaled SVC using CV: {}'.format(cross_val_score(svc_unscaled, X, y, cv=5).mean()))\n",
+    "print('Scaled SVC using CV: {}'.format(cross_val_score(scv_scaled, X, y, cv=5).mean()))"
    ]
   },
   {
@@ -1700,6 +1747,38 @@
    },
    "source": [
     "Please implement a GridSearchCV to find the optimum value of C and gamma parameters of your previously implemented SVM pipeline and fine tune. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'svc__C': 10.0, 'svc__gamma': 0.004641588833612777}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params = {'svc__C': np.logspace(-3,3,10),\n",
+    "             'svc__gamma': np.logspace(-3,3,10)}\n",
+    "\n",
+    "svc_scaled = make_pipeline(StandardScaler(), SVC())\n",
+    "\n",
+    "grid_svc = GridSearchCV(svc_scaled, param_grid=params, cv=10)\n",
+    "grid_svc.fit(X, y)\n",
+    "\n",
+    "grid_svc.best_params_"
    ]
   },
   {
